<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.moviebooking</groupId>
        <artifactId>movie-booking-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>ai-recommender-service</artifactId>
    <packaging>jar</packaging>

    <name>ai-recommender-service</name>
    <description>AI Recommender Microservice with DJL ONNX Runtime</description>

    <properties>
        <java.version>21</java.version>
        <djl.version>0.27.0</djl.version>
    </properties>

    <dependencies>
        <!-- Common Module -->
        <dependency>
            <groupId>com.moviebooking</groupId>
            <artifactId>common</artifactId>
        </dependency>

        <!-- Spring Kafka -->
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>

        <!-- DJL (Deep Java Library) - AWS Production AI Framework -->
        <dependency>
            <groupId>ai.djl</groupId>
            <artifactId>api</artifactId>
            <version>${djl.version}</version>
        </dependency>

        <!-- DJL ONNX Runtime Engine (production-grade, cross-platform) -->
        <dependency>
            <groupId>ai.djl.onnxruntime</groupId>
            <artifactId>onnxruntime-engine</artifactId>
            <version>${djl.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- DJL HuggingFace Tokenizer (for all-MiniLM-L6-v2 tokenization) -->
        <dependency>
            <groupId>ai.djl.huggingface</groupId>
            <artifactId>tokenizers</artifactId>
            <version>${djl.version}</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
